add task solution

--- a/src/styles/block-styles/calendar.scss
+++ b/src/styles/block-styles/calendar.scss
@@ -1,7 +1,7 @@
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: calc((($cell-size + $border-size) * $days-in-week) + (2 * $margin));
+  width: $width;
 }
 
 .day {
