--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,7 @@ $margin: 10px;
 $days-in-week: 7;
 
 $starting-day: 1;
+$width: calc(
+  (#{$cell-size} + #{$border-size}) * #{$days-in-week} +
+  2 * #{$margin}
+);
