--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,62 @@
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.calendar {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -($height/2);
+  margin-left: -($width/2);
+  gap: $gap-size;
+  width: $width;
+  // margin: 10px 10px;
+
+  &__month {
+    display: flex;
+    flex-wrap: wrap;
+    gap: $gap-size;
+  }
+
+  &__cell {
+    background-color: $cell-color;
+    box-sizing: border-box;
+    height: $cell-size;
+    width: $cell-size;
+    border: 1px solid #000;
+    transition: all 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+
+      &:hover {
+        background-color: $cell-hover;
+        cursor: pointer;
+        transform: translateY(-20px);
+      }
+    }
+  }
+
+  @each $name, $day in $days {
+    &__startday--#{$name} {
+      .calendar__cell:first-child {
+        margin-left: ($cell-size + $gap-size) * $day;
+      }
+    }
+  }
+
+  @for $month-lenght from 28 through 31 {
+    &__month-lenght--#{$month-lenght} {
+      .calendar__cell:nth-child(n + #{$month-lenght + 1}) {
+        display: none;
+      }
+    }
+  }
 }
