--- a/src/styles/utils/days.scss
+++ b/src/styles/utils/days.scss
@@ -1,5 +1,5 @@
 @each $day, $num in $start-day {
-  .calendar__day--#{$day} :first-child {
+  .calendar--day-#{$day} :first-child {
     margin-left: $num * ($item-width + $gap + 2 * $border-size);
   }
 }
