--- a/src/styles/utils/months.scss
+++ b/src/styles/utils/months.scss
@@ -1,5 +1,5 @@
 @each $month in $month-length {
-  .calendar__month-length--#{$month} :nth-child(n + #{$month + 1}) {
+  .calendar--month-length-#{$month} :nth-child(n + #{$month + 1}) {
     display: none;
   }
 }
