add second corrected solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,21 +51,21 @@ body {
     }
   }
 
-  &.month-length-28 {
-    &:nth-child(n + 29) {
-      display: none;
-    }
-  }
+}
 
-  &.month-length-29 {
-    &:nth-child(n + 30) {
-      display: none;
-    }
-  }
+.start-day-sunday .calendar__day:nth-child(7n + 1),
+.start-day-monday .calendar__dayy:nth-child(7n + 2),
+.start-day-tuesday .calendar__day:nth-child(7n + 3),
+.start-day-wednesday .calendar__day:nth-child(7n + 4),
+.start-day-thursday .calendar__day:nth-child(7n + 5),
+.start-day-friday .calendar__day:nth-child(7n + 6),
+.start-day-saturday .calendar__day:nth-child(7n + 7) {
+  order: 1;
+}
 
-  &.month-length-30 {
-    &:nth-child(n + 31) {
-      display: none;
-    }
-  }
+.month-length-28 .calendar__day:nth-last-child(-n+4),
+.month-length-29 .calendar__day:nth-last-child(-n+5),
+.month-length-30 .calendar__day:nth-last-child(-n+6),
+.month-length-31 .calendar__day {
+  display: none;
 }
