--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -29,6 +29,12 @@ body {
     background-color: $day-color;
     font-family: 'Arial', sans-serif;
     font-size: 30px;
+    transition: all 0.5s;
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+    }
 
     @for $cell from 1 through 31 {
       &--day--#{$cell} {
@@ -39,7 +45,12 @@ body {
           line-height: $day-size;
         }
       }
+    }
+  }
 
+  @for $day from 28 through 31 {
+    &--month-length--#{$day} :nth-child(n + #{$day + 1}) {
+      display: none;
     }
   }
 }
