--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,6 +40,12 @@ body {
   background-color: #eee;
   font-family: "Arial", sans-serif;
   font-size: 30px;
+  transition: all 0.5s;
+}
+.calendar__cell:hover {
+  cursor: pointer;
+  background-color: pink;
+  transform: translateY(-20px);
 }
 .calendar__cell--day--1::before {
   content: "1";
@@ -226,6 +232,18 @@ body {
   display: block;
   text-align: center;
   line-height: 100px;
+}
+.calendar--month-length--28 :nth-child(n+29) {
+  display: none;
+}
+.calendar--month-length--29 :nth-child(n+30) {
+  display: none;
+}
+.calendar--month-length--30 :nth-child(n+31) {
+  display: none;
+}
+.calendar--month-length--31 :nth-child(n+32) {
+  display: none;
 }
 
 /*# sourceMappingURL=main.css.map */
