used nth child instead of modifiers

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,27 +11,7 @@ body {
   gap: 1px;
   width: 726px;
 }
-.calendar--start-day--mon .calendar__cell:first-child {
-  margin-left: 0px;
-}
-.calendar--start-day--tue .calendar__cell:first-child {
-  margin-left: 101px;
-}
-.calendar--start-day--wed .calendar__cell:first-child {
-  margin-left: 202px;
-}
-.calendar--start-day--thu .calendar__cell:first-child {
-  margin-left: 303px;
-}
-.calendar--start-day--fri .calendar__cell:first-child {
-  margin-left: 404px;
-}
-.calendar--start-day--sat .calendar__cell:first-child {
-  margin-left: 505px;
-}
-.calendar--start-day--sun .calendar__cell:first-child {
-  margin-left: 606px;
-}
+
 .calendar__cell {
   box-sizing: border-box;
   border: solid 1px black;
@@ -42,206 +22,270 @@ body {
   font-size: 30px;
   transition: all 0.5s;
 }
+
 .calendar__cell:hover {
   cursor: pointer;
   background-color: pink;
   transform: translateY(-20px);
 }
-.calendar__cell--day--1::before {
+
+.calendar__cell:nth-child(1)::before {
   content: "1";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--2::before {
+
+.calendar__cell:nth-child(2)::before {
   content: "2";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--3::before {
+
+.calendar__cell:nth-child(3)::before {
   content: "3";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--4::before {
+
+.calendar__cell:nth-child(4)::before {
   content: "4";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--5::before {
+
+.calendar__cell:nth-child(5)::before {
   content: "5";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--6::before {
+
+.calendar__cell:nth-child(6)::before {
   content: "6";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--7::before {
+
+.calendar__cell:nth-child(7)::before {
   content: "7";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--8::before {
+
+.calendar__cell:nth-child(8)::before {
   content: "8";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--9::before {
+
+.calendar__cell:nth-child(9)::before {
   content: "9";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--10::before {
+
+.calendar__cell:nth-child(10)::before {
   content: "10";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--11::before {
+
+.calendar__cell:nth-child(11)::before {
   content: "11";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--12::before {
+
+.calendar__cell:nth-child(12)::before {
   content: "12";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--13::before {
+
+.calendar__cell:nth-child(13)::before {
   content: "13";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--14::before {
+
+.calendar__cell:nth-child(14)::before {
   content: "14";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--15::before {
+
+.calendar__cell:nth-child(15)::before {
   content: "15";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--16::before {
+
+.calendar__cell:nth-child(16)::before {
   content: "16";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--17::before {
+
+.calendar__cell:nth-child(17)::before {
   content: "17";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--18::before {
+
+.calendar__cell:nth-child(18)::before {
   content: "18";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--19::before {
+
+.calendar__cell:nth-child(19)::before {
   content: "19";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--20::before {
+
+.calendar__cell:nth-child(20)::before {
   content: "20";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--21::before {
+
+.calendar__cell:nth-child(21)::before {
   content: "21";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--22::before {
+
+.calendar__cell:nth-child(22)::before {
   content: "22";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--23::before {
+
+.calendar__cell:nth-child(23)::before {
   content: "23";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--24::before {
+
+.calendar__cell:nth-child(24)::before {
   content: "24";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--25::before {
+
+.calendar__cell:nth-child(25)::before {
   content: "25";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--26::before {
+
+.calendar__cell:nth-child(26)::before {
   content: "26";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--27::before {
+
+.calendar__cell:nth-child(27)::before {
   content: "27";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--28::before {
+
+.calendar__cell:nth-child(28)::before {
   content: "28";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--29::before {
+
+.calendar__cell:nth-child(29)::before {
   content: "29";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--30::before {
+
+.calendar__cell:nth-child(30)::before {
   content: "30";
   display: block;
   text-align: center;
   line-height: 100px;
 }
-.calendar__cell--day--31::before {
+
+.calendar__cell:nth-child(31)::before {
   content: "31";
   display: block;
   text-align: center;
   line-height: 100px;
 }
+
+.calendar--start-day--mon .calendar__cell:first-child {
+  margin-left: 0;
+}
+
+.calendar--start-day--tue .calendar__cell:first-child {
+  margin-left: 101px;
+}
+
+.calendar--start-day--wed .calendar__cell:first-child {
+  margin-left: 202px;
+}
+
+.calendar--start-day--thu .calendar__cell:first-child {
+  margin-left: 303px;
+}
+
+.calendar--start-day--fri .calendar__cell:first-child {
+  margin-left: 404px;
+}
+
+.calendar--start-day--sat .calendar__cell:first-child {
+  margin-left: 505px;
+}
+
+.calendar--start-day--sun .calendar__cell:first-child {
+  margin-left: 606px;
+}
+
 .calendar--month-length--28 :nth-child(n+29) {
   display: none;
 }
+
 .calendar--month-length--29 :nth-child(n+30) {
   display: none;
 }
+
 .calendar--month-length--30 :nth-child(n+31) {
   display: none;
 }
+
 .calendar--month-length--31 :nth-child(n+32) {
   display: none;
 }
