used nth child instead of modifiers

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -29,7 +29,7 @@ body {
     @for $cell from 1 through 31 {
       &:nth-child(#{$cell}) {
         &::before {
-          content: '#{$cell}';
+          content: "#{$cell}";
           display: block;
           text-align: center;
           line-height: $day-size;
