remove border, center both horizontally and vertically

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -4,13 +4,20 @@
   box-sizing: border-box;
 }
 
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .calendar {
-  margin: 0 auto;
   display: flex;
   gap: $gap-size;
   flex-wrap: wrap;
   padding: $container-padding;
   width: $container-width;
+  flex-shrink: 0;
 
   &__day {
     background-color: $day-color;
