--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,3 +5,11 @@ $heightDay: 100px;
 $gapPx: 1px;
 $borderPx: 1px;
 $daysWeek: mon, tue, wed, thu, fri, sat, sun;
+$week-days:
+    "mon" 0,
+    "tue" 1,
+    "wed" 2,
+    "thu" 3,
+    "fri" 4,
+    "sat" 5,
+    "sun" 6;
