add fourth corrected solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -57,7 +57,7 @@ body {
   }
 
   @each $day, $marginsNumber in $week-days {
-    &.start-#{$day} {
+    &.start--#{$day} {
       .calendar__day:first-child {
         margin-left: ($widthDay + $gapPx + $borderPx * 2) * $marginsNumber;
       }
