--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,7 @@
-$cell-size: 100px;
-$border-size: 1px;
-$margin: 10px;
-$days-in-week: 7;
-
-$starting-day: 1;
-$width: calc(
-  (#{$cell-size} + #{$border-size}) * #{$days-in-week} +
-  2 * #{$margin}
-);
+$day-size: 100px;
+$day-color: #eee;
+$container-padding: 10px;
+$gap-size: 1px;
+$container-width: $day-size * 7 + $gap-size * 6 + $container-padding * 2 + 2;
+$days-of-week: mon, tue, wed, thu, fri, sat, sun;
+$day-width: $day-size + $gap-size;
