--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import './utils/variables.scss';
+@import "./utils/variables.scss";
 
 body {
   margin: 0;
@@ -7,7 +7,7 @@ body {
   align-items: center;
   height: 100vh;
 
-  font-family: 'Arial';
+  font-family: "Arial", sans-serif;
   font-size: 30px;
 }
 
@@ -48,7 +48,6 @@ body {
       }
     }
   }
-
 
   @each $day, $numOfDay in $days-of-week {
     &--start-day--#{$day} :first-child {
