--- a/src/styles/utiles/variables.scss
+++ b/src/styles/utiles/variables.scss
@@ -6,7 +6,7 @@ $calendarFontSize: 30px;
 
 $paddingCalendar: 10px;
 $calendarGap: 1px;
-$calendarWidth: $calendarDayWidth * 7 + $paddingCalendar;
+$calendarWidth: $calendarDayWidth * 7 + $calendarGap * 6;
 $fontFamily: "Arial", "Helvetica", sans-serif;
 
 $dayOfWeek:
