--- a/src/styles/blocs/calendar.scss
+++ b/src/styles/blocs/calendar.scss
@@ -1,26 +1,35 @@
-html {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 30px;
-}
-
 body {
-  display: flex;
   margin: 0;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
 }
 
 .calendar {
   display: flex;
-  padding: 10px;
-  gap: 1px;
-  width: $size-squeare*7;
   flex-wrap: wrap;
+  width: calc(7 * #{$size-squeare} +
+  6 * #{$gap-size} +
+  2 * #{$calendar-padding});
+  padding: $calendar-padding;
+  gap: $gap-size;
+  margin: auto;
+
+  @each $day, $index in
+    (mon: 0, tue: 1, wed: 2, thu: 3, fri: 4, sat:5, sun:6) {
+    &.calendar--start-#{$day} .calendar__day:first-child {
+      margin-left: calc(
+        (#{$size-squeare} + 2 * #{$border-size} + #{$gap-size}) * #{$index}
+      );
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &.calendar--month-length-#{$i}
+    .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 
   &__day {
     display: flex;
-    box-sizing: border-box;
     justify-content: center;
     align-items: center;
     width: $size-squeare;
@@ -28,32 +37,23 @@ body {
     border: 1px solid black;
     background-color: #eee;
 
-    transition: all 0.5s;
+    &::before {
+      content: "";
+      font-size: 30px;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
 
     &:hover {
-      transform: translateY(-20px);
-      background-color: pink;
       cursor: pointer;
-    }
-
-    @for $day from 1 through 31 {
-      &:nth-child(#{$day})::before {
-        content: "#{$day}";
-      }
-    }
-  }
-
-  @each $day, $number in $week {
-    &--start-day--#{$day} :first-day {
-      margin-left: ($size-squeare + 1) * $number;
-    }
-  }
-
-  @for $length from 28 through 31 {
-    &--month-length--#{$length} {
-      .calendar__day:nth-child(n + #{$length + 1}) {
-        display: none;
-      }
+      background-color: pink;
+      transition: transform 0.5s;
+      transform: translateY(-20px);
     }
   }
 }
