--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,9 +1,5 @@
 $size-squeare: 100px;
-$week:
-  "mon" 0,
-  "tue" 1,
-  "wed" 2,
-  "thu" 3,
-  "fri" 4,
-  "sat" 5,
-  "sun" 6;
+$days-in-week: 7;
+$border-size: 1px;
+$calendar-padding: 10px;
+$gap-size: 1px;
