--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,45 +1,60 @@
 @import "./variables.scss";
+
 body {
   margin: 0;
 }
 
-@keyframes move {
-  100% {
-    transform: translateY(-20px);
-  }
-}
-
 .calendar {
   display: flex;
-  width: $week-width;
   flex-wrap: wrap;
-  flex-direction: row;
+  width: calc(7 * #{$day-size} + 6 * #{$gap-size} + 2 * #{$calendar-padding});
+  padding: $calendar-padding;
   gap: $gap-size;
-  padding: 10px;
+  margin: auto;
 
-  &__day {
-    box-sizing: border-box;
-    background-color: $card-color;
-    width: $card-size;
-    height: $card-size;
-    border: 1px solid black;
-
-    &:hover {
-      animation: move 0.5s;
-      cursor: pointer;
-      background-color: pink;
+  @each $day, $index in
+    (mon: 0, tue: 1, wed: 2, thu: 3, fri: 4, sat: 5, sun: 6) {
+    &.calendar--start-#{$day} .calendar__day:first-child {
+      margin-left: calc(
+        (#{$day-size} +
+        2 * #{$border-size} +
+        #{$gap-size}) * #{$index}
+      );
     }
   }
-}
 
-@for $i from 1 through 31 {
-  .calendar__day:nth-child(#{$i})::before {
-    content: "#{$i}";
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
+  @for $i from 28 through 31 {
+    &.calendar--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    background-color: #eee;
+    height: $day-size;
+    width: $day-size;
+    border: $border-size solid #000;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: $card-size;
+
+    &::before {
+      content: "";
+      font-size: 30px;
+      font-family: Arial, sans-serif;
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transition: transform 0.5s;
+      transform: translateY(-20px);
+    }
   }
 }
