--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,5 @@
-$card-color: #eee;
-$card-size: 100px;
+$day-size: 100px;
 $gap-size: 1px;
-$week-width: calc(7 * #{$card-size} + 6 * #{$gap-size});
-
-$weekdays:
-  "mon" 0,
-  "tue" calc(#{$card-size} + #{$gap-size}),
-  "wed" calc( 2 * (#{$card-size} + #{$gap-size})),
-  "thu" calc( 3 * (#{$card-size} + #{$gap-size})),
-  "fri" calc( 4 * (#{$card-size} + #{$gap-size})),
-  "sat" calc( 5 * (#{$card-size} + #{$gap-size})),
-  "sun" calc( 6 * (#{$card-size} + #{$gap-size}));
+$border-size: 1px;
+$calendar-padding: 10px;
+$days-in-week: 7;
