--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
-$fontFameli: "Arial" ,sans-serif;
+$fontFameli: "Arial", "Helvetica",sans-serif;
 $squreBacColor : #eee;
 $fontSize: 30px;
 $squareSize: 100px;
@@ -11,5 +11,3 @@ $dayOfWiks :
   "fri" 4,
   "sat" 5,
   "sun" 6;
-
-  
