--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@ body {
 
 .calendar {
   display: flex;
-  width: $calendarWidth;
+  width: $calendar-width;
   flex-wrap: wrap;
   gap: 1px;
 
@@ -27,22 +27,22 @@ body {
     }
   }
 
-  @each $weekDay , $num in $dayOfWiks {
+  @each $weekDay , $num in $day-of-wiks {
     &--start-day--#{$weekDay} {
       .calendar__day:first-child {
-        margin-left: $squareSize * $num + $num;
+        margin-left: $square-size * $num + $num;
       }
     }
   }
 
   &__day {
-    font-family: $fontFameli;
-    font-size: $fontSize;
+    font-family: $font-fameli;
+    font-size: $font-size;
     justify-content: center;
     align-items: center;
-    height: $squareSize;
-    width: $squareSize;
-    background-color: $squreBacColor;
+    height: $square-size;
+    width: $square-size;
+    background-color: $squre-bac-color;
     border: 1px solid #000;
     transition: 0.5s;
 
