--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,9 @@
-$fontFameli: "Arial", "Helvetica",sans-serif;
-$squreBacColor : #eee;
-$fontSize: 30px;
-$squareSize: 100px;
-$calendarWidth: $squareSize * 7 + 10px;
-$dayOfWiks :
+$font-fameli: "Arial", "Helvetica",sans-serif;
+$squre-bac-color: #eee;
+$font-size: 30px;
+$square-size: 100px;
+$calendar-width: $square-size * 7 + 10px;
+$day-of-wiks:
   "mon" 0,
   "tue" 1,
   "wed" 2,
