add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import "./variables";
 
 * {
   box-sizing: border-box;
@@ -36,6 +36,7 @@ body {
   }
 
   &__day {
+    display: flex;
     font-family: $font-fameli;
     font-size: $font-size;
     justify-content: center;
