--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,51 @@
+@import './utils/variable';
+
 body {
   margin: 0;
+}
+
+.calendar {
+  width: $calendar-width;
+  display: flex;
+  gap: $calendar-gap;
+  padding: $calendar-padding;
+  flex-wrap: wrap;
+
+  @for $number from 1 through 31 {
+    & :nth-child(#{$number})::before {
+      content: '#{$number}';
+    }
+  }
+
+  &__day {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    box-sizing: border-box;
+    width: $day-width;
+    height: $day-height;
+    display: none;
+  }
+
+  @each $amount-days in $month-lengh {
+    &--month-lengh--#{$amount-days} :nth-child(-n + #{$amount-days}) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid black;
+      background-color: $day-color;
+      transition-duration: $transition-time;
+
+      &:hover {
+        cursor: pointer;
+        background-color: pink;
+        transform: translateY(-$day-translate);
+      }
+    }
+  }
+
+  @each $coefficient, $day-start in $days-start {
+    &--start-day--#{$day-start} :first-child{
+      margin-left: ($day-width + $calendar-gap) * $coefficient;
+    }
+  }
 }
