--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,50 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+}
+
+.calendar {
+  width: 726px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  padding: 10px;
+
+  @for $i from 28 through 31 {
+    .month-length-#{$i} {
+      &:nth-last-child(#{$i}n) {
+        display: none;
+      }
+    }
+  }
+
+  &__day {
+    background-color: #eee;
+    height: 100px;
+    width: 100px;
+    border: 1px black solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, sans-serif;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+        font-size: 30px;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+      transition: transform 0.5s;
+    }
+  }
+
 }
