--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -7,19 +7,22 @@
   &__date {
     display: flex;
     position: relative;
-    height: $date_size;
-    width: $date_size;
+    height: $day_size;
+    width: $day_size;
     border: 1px solid #000;
     background-color: #eee;
     margin: 0.5px;
     align-items: center;
     justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
 
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
         text-align: center;
         justify-content: center;
+        transition: transform 500ms;
 
         position: absolute;
       }
@@ -33,18 +36,9 @@
     }
   }
 
-  $days:(
-    "mon" 0,
-    "tue" 1,
-    "wed" 2,
-    "thu" 3,
-    "fri" 4,
-    "sat" 5,
-    "sun" 6
-  );
   @each $day, $i in $days {
     &--start-day--#{$day} > :first-child {
-      margin-left: #{(($date_size + $gap) * $i)};
+      margin-left: #{(($day_size + $gap) * $i)};
     }
   }
 
