--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,3 +1,12 @@
-$date_size: 100px;
+$day_size: 100px;
 $calendar-width: 710px;
 $gap: 1px;
+$days:(
+  "mon" 0,
+  "tue" 1,
+  "wed" 2,
+  "thu" 3,
+  "fri" 4,
+  "sat" 5,
+  "sun" 6
+);
