add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -2,7 +2,10 @@
   display: flex;
   flex-wrap: wrap;
   width: $calendar-width;
-  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 
   &__date {
     display: flex;
@@ -14,6 +17,7 @@
     margin: 0.5px;
     align-items: center;
     justify-content: center;
+    transition: transform 500ms;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
 
@@ -22,7 +26,6 @@
         content: "#{$i}";
         text-align: center;
         justify-content: center;
-        transition: transform 500ms;
 
         position: absolute;
       }
@@ -32,7 +35,6 @@
       cursor: pointer;
       background-color: pink;
       transform: translateY(-20px);
-      transition: transform 500ms;
     }
   }
 
