--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
-@import "./utils/variables.scss";
-@import "./blocks/calendar.scss";
+@import "./utils/variables";
+@import "./blocks/calendar";
 
 * {
   box-sizing: border-box;
