--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,50 @@
+$card__width: 100px;
+$calendar__gap: 1px;
+$calendar__width: $card__width * 7 + $calendar__gap * 6;
+$calendar__start: $card__width * 6 + $calendar__gap * 6;
+
 body {
   margin: 0;
+}
+
+.calendar {
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $calendar__gap;
+  width: $calendar__windth;
+
+  &__day {
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    background-color: #eee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+
+    @for $month-length from 28 through 31 {
+      &--month-length--#{$month-length} :nth-child(-n + #{$month-length}) {
+        display: none;
+      }
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
+  }
+
+  &__day:first-child {
+    margin-left:  #{$calendar__start};
+  }
+  
+  @for $month-length from 28 through 31 {
+    &--month-length--#{$month-length} :nth-child(-n + #{$month-length}) {
+      display: none;
+    }
+  }
 }
