--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,60 @@
+@import "./variables.scss";
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+
+  display: flex;
+  justify-content: center;
+}
+
+.calendar {
+  width: $calendar--size;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $day-block--gap;
+  padding: 10px;
+
+  @each $day, $margin in $days {
+    &--start-day--#{$day} {
+      div:first-child {
+      margin-left: $margin;
+      }
+    }
+  }
+
+  @for $month-length from 28 through 31 {
+    &--month-length-#{$month-length} {
+     & :nth-child(n + #{$month-length + 1}) {
+       display: none;
+     }
+    }
+   }
+}
+
+.calendar__day {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+
+  width: $day-block--size;
+  height: $day-block--size;
+
+  background-color: #eee;
+  border: 1px black solid;
+  transition: transform 0.5s;
+
+  &:hover {
+    background-color: pink;
+    cursor: pointer;
+    transform: translateY(-20px);
+  }
+}
+
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(1n + #{$i})::before {
+    content: "#{$i}";
+  }
 }
