--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@ $day-block--size: 100px;
 $day-block--gap: 1px;
 $calendar--size: (($day-block--size * 7) + ($day-block--gap * 6));
 $days: (
-  "mon": 0px,
+  "mon": 0,
   "tue": $day-block--size + $day-block--gap,
   "wed": ($day-block--size + $day-block--gap) * 2,
   "thu": ($day-block--size + $day-block--gap) * 3,
