add task solution_2

--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -43,7 +43,7 @@
   @each $name, $value in $each-day {
     &--start-day--#{$name} {
       .calendar__day:first-child {
-        margin-left: $value;
+        margin-left: ($day-width + $day-gap) * $value;
       }
     }
   }
