add new changes

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -8,7 +8,7 @@
 
   @each $day, $margin in $days {
     &--start-day--#{$day} {
-      .calendar__day:first-of-type {
+      .calendar__day:first-child {
         margin-left: $margin;
       }
     }
