--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,131 +7,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-  width: 706px;
-}
-
-.calendar .calendar--month-length--1 {
-  display: block;
-}
-
-.calendar .calendar--month-length--2 {
-  display: block;
-}
-
-.calendar .calendar--month-length--3 {
-  display: block;
-}
-
-.calendar .calendar--month-length--4 {
-  display: block;
-}
-
-.calendar .calendar--month-length--5 {
-  display: block;
-}
-
-.calendar .calendar--month-length--6 {
-  display: block;
-}
-
-.calendar .calendar--month-length--7 {
-  display: block;
-}
-
-.calendar .calendar--month-length--8 {
-  display: block;
-}
-
-.calendar .calendar--month-length--9 {
-  display: block;
-}
-
-.calendar .calendar--month-length--10 {
-  display: block;
-}
-
-.calendar .calendar--month-length--11 {
-  display: block;
-}
-
-.calendar .calendar--month-length--12 {
-  display: block;
-}
-
-.calendar .calendar--month-length--13 {
-  display: block;
-}
-
-.calendar .calendar--month-length--14 {
-  display: block;
-}
-
-.calendar .calendar--month-length--15 {
-  display: block;
-}
-
-.calendar .calendar--month-length--16 {
-  display: block;
-}
-
-.calendar .calendar--month-length--17 {
-  display: block;
-}
-
-.calendar .calendar--month-length--18 {
-  display: block;
-}
-
-.calendar .calendar--month-length--19 {
-  display: block;
-}
-
-.calendar .calendar--month-length--20 {
-  display: block;
-}
-
-.calendar .calendar--month-length--21 {
-  display: block;
-}
-
-.calendar .calendar--month-length--22 {
-  display: block;
-}
-
-.calendar .calendar--month-length--23 {
-  display: block;
-}
-
-.calendar .calendar--month-length--24 {
-  display: block;
-}
-
-.calendar .calendar--month-length--25 {
-  display: block;
-}
-
-.calendar .calendar--month-length--26 {
-  display: block;
-}
-
-.calendar .calendar--month-length--27 {
-  display: block;
-}
-
-.calendar .calendar--month-length--28 {
-  display: block;
-}
-
-.calendar .calendar--month-length--29 {
-  display: block;
-}
-
-.calendar .calendar--month-length--30 {
-  display: block;
-}
-
-.calendar .calendar--month-length--31 {
-  display: block;
+  width: 100px;
 }
 
 .calendar__day {
@@ -144,6 +20,22 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 18px;
+}
+
+.calendar__day--month-length--28 :nth-child(-n+28) {
+  display: none;
+}
+
+.calendar__day--month-length--29 :nth-child(-n+29) {
+  display: none;
+}
+
+.calendar__day--month-length--30 :nth-child(-n+30) {
+  display: none;
+}
+
+.calendar__day--month-length--31 :nth-child(-n+31) {
+  display: none;
 }
 
 .calendar__day:nth-child(1)::before {
@@ -273,3 +165,20 @@ body {
 .calendar__day:first-child {
   margin-left: 606px;
 }
+
+.calendar--month-length--28 :nth-child(-n+28) {
+  display: none;
+}
+
+.calendar--month-length--29 :nth-child(-n+29) {
+  display: none;
+}
+
+.calendar--month-length--30 :nth-child(-n+30) {
+  display: none;
+}
+
+.calendar--month-length--31 :nth-child(-n+31) {
+  display: none;
+}
+/*# sourceMappingURL=main.css.map */
