--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
-$card__width: 100px;
-$calendar__gap: 1px;
-$calendar__width: $card__width * 7 + $calendar__gap * 6;
-$calendar__start: $card__width * 6 + $calendar__gap * 6;
+$card-width: 100px;
+$calendar-gap: 1px;
+$calendar-width: $card-width * 7 + $calendar-gap * 6;
+$calendar-start: $card-width * 6 + $calendar-gap * 6;
 
 body {
   margin: 0;
@@ -11,8 +11,8 @@ body {
   padding: 10px;
   display: flex;
   flex-wrap: wrap;
-  gap: $calendar__gap;
-  width: $calendar__windth;
+  gap: $calendar-gap;
+  width: $card-width;
 
   &__day {
     width: 100px;
@@ -39,9 +39,9 @@ body {
   }
 
   &__day:first-child {
-    margin-left:  #{$calendar__start};
+    margin-left:  #{$calendar-start};
   }
-  
+
   @for $month-length from 28 through 31 {
     &--month-length--#{$month-length} :nth-child(-n + #{$month-length}) {
       display: none;
