--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -8,7 +8,7 @@
 
   @each $day, $margin in $days {
     &--start-day--#{$day} {
-      .calendar__day:first-child {
+      &__day:first-child {
         margin-left: $margin;
       }
     }
@@ -16,7 +16,7 @@
 
   @for $month-length from 28 through 31 {
     &--month-length-#{$month-length} {
-      :nth-child(n + #{$month-length + 1}) {
+      &:nth-child(n + #{$month-length + 1}) {
         display: none;
       }
     }
