update task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,8 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
+  height: 100vh;
+  align-items: center;
 }
 
 .calendar {
@@ -40,8 +42,8 @@ body {
       }
     }
 
-    @for $index from 31 through $month {
-      .calendar--month-length#{$index}
+    @for $index from 28 through $month {
+      .calendar--month-length-#{$index}
       &:nth-child(n + #{$index + 1}) {
         display: none;
       }
@@ -52,7 +54,7 @@ body {
 $days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
 @each $day, $index in $days {
-  .calendar--start-day#{$day} {
+  .calendar--start-day-#{$day} {
     .calendar__day:first-child {
       margin-left: ($box-size + $box-size) * $index;
     }
