--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,8 @@
 
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .calendar {
@@ -14,7 +16,6 @@ body {
   flex-wrap: wrap;
   gap: 1px;
   padding: 10px;
-  position: relative;
 
   &__day {
     border: 1px solid #000;
