--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
+$day-gap: 1px;
+$day-width: 100px;
+$each-day: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
 * {
   box-sizing: border-box;
 }
@@ -30,6 +34,22 @@ body {
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: "#{$i}";
+      }
+    }
+
+    @each $name, $value in $each-day {
+      &--start-day--#{$name} {
+        .calendar__day:first-child {
+          margin-left: ($day-width + $day-gap) * $value;
+        }
+      }
+    }
+
+    @for $last-day from 28 through 31 {
+      &--month-length--#{$last-day} {
+        .calendar__day:nth-child(n + #{$last-day + 1}) {
+          display: none;
+        }
       }
     }
 
