--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
-body {
+@import "blocks/utils/variables";
+@import "blocks/month";
+
+.calendar {
   margin: 0;
+  border: 2px solid #000;
+  width: min-content;
+  height: min-content;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
 }
