--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,57 @@
+$box-side: 100px;
+$count-of-columns: 7;
+$gap: 1px;
+$start-days: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.calendar {
+  box-sizing: border-box ;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  gap: $gap;
+  width: $count-of-columns * $box-side + 26px;
+  padding: 10px;
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    width: $box-side;
+    height: $box-side;
+    background-color: #eee;
+    border: 1px solid black;
+    position: relative;
+    font-size: 30px;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+  }
+
+  @each $start-day, $index in $start-days {
+    &--start-day--#{$start-day} :first-child {
+      margin-left: ($box-side + $gap) * ($index - 1);
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length--#{$i} :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
