--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,74 @@
+$cell-color: #eee;
+$cell-side: 75px;
+$cell-border-color: black;
+$days-count: 31;
+$cells-gap: 1px;
+$days-list: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
+$cell-hover-color: pink;
+
+
 body {
-  margin: 0;
+  margin: 0 auto;
+  background-color: bisque;
 }
+
+.calendar {
+  padding: 0;
+  margin: 0;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: $cells-gap;
+  width: 7 * $cell-side + 6px + 20px; /* 7 = days count, 6 = gap's count, 20px = 2*10px padding */
+
+  padding-inline: 10px;
+
+  list-style: none;
+
+  &__day {
+    position: relative;
+    width: $cell-side;
+    height: $cell-side;
+    box-sizing: border-box;
+
+    background-color: $cell-color;
+    border: 1px solid $cell-border-color;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+
+    cursor: pointer;
+
+    transition: 0.5s;
+
+    &:hover {
+      background-color: $cell-hover-color;
+      transform: translate(0,-20px);
+    }
+
+    @for $day from 1 through $days-count {
+      &:nth-child(#{$day}):before {
+        content:' #{$day}';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+
+  @each $week-day-name, $num in $days-list {
+    &--start-day-#{$week-day-name} :first-child{
+      margin-left: ($cell-side + $cells-gap) * ($num - 1);
+    }
+  }
+
+
+  @for $day-num from 28 through 31 {
+    &--month-length-#{$day-num} :nth-child(n + #{$day-num + 1}) {
+      display: none;
+    }
+  }
+}
+
+
