--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,19 +1,17 @@
 $cell-color: #eee;
-$cell-side: 75px;
+$cell-side: 100px;
 $cell-border-color: black;
 $days-count: 31;
 $cells-gap: 1px;
 $days-list: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
 $cell-hover-color: pink;
 
-
 body {
-  margin: 0 auto;
-  background-color: bisque;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .calendar {
-  padding: 0;
   margin: 0;
 
   display: flex;
@@ -21,7 +19,7 @@ body {
   gap: $cells-gap;
   width: 7 * $cell-side + 6px + 20px; /* 7 = days count, 6 = gap's count, 20px = 2*10px padding */
 
-  padding-inline: 10px;
+  padding: 10px;
 
   list-style: none;
 
@@ -34,7 +32,6 @@ body {
     background-color: $cell-color;
     border: 1px solid $cell-border-color;
 
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
 
     cursor: pointer;
