--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,7 +21,7 @@ $days: mon tue wed thu fri sat sun;
   gap: 1px;
 
   @each $day in $days {
-    $i: list.index($days, $day);
+    $i: list.index($days, $day) - 1;
 
     &--start-day--#{$day} .calendar__day:first-child {
       margin-left: $i * $cell-size + $i;
