--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,12 @@ $gray: #eee;
 $cell-size: 100px;
 $days: mon tue wed thu fri sat sun;
 
+.content {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
 .calendar {
   width: $cell-size * 7 + 6 + 20;
   padding: 10px;
