--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,51 @@
+@import './utils/variables.scss';
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.calendar {
+  display: flex;
+  width: $width-max-calendar;
+  flex-wrap: wrap;
+  gap: $gap-between-days;
+  padding: $padding-between-days;
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: $height-day-box;
+    width: $width-day-box;
+    border: 1px solid black;
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transition: $transition-during;
+      transform: $transform-day-ceil;
+    }
+
+    @for $d from 1 through 31 {
+     &:nth-child(#{$d})::before {
+        content: '#{$d}';
+      }
+    }
+  }
+
+  @each $day, $index in $start-day {
+    &--start-#{$day} :first-child {
+      margin-left: ($width-day-box + $gap-between-days) * $index;
+    }
+  }
+
+  @for $m from 28 through 31 {
+    &--month-length-#{$m} :nth-child(n + #{$m + 1}) {
+      display: none;
+    }
+  }
 }
