--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,54 @@
+@import "variable";
+
 body {
   margin: 0;
 }
+
+.calendar {
+  display: flex;
+  box-sizing: border-box;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  width: 730px;
+  padding: 10px;
+  gap: $day-gap;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    height: $day-height;
+    width: $day-width;
+    border: 1px solid black;
+    background-color: #eee;
+    transition: all 0.5s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+  }
+
+  @for $day from 1 through 31 {
+    &__day:nth-child(#{$day})::before {
+      content: '#{$day}';
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+    }
+  }
+
+  @each $day, $number in $week-days {
+    &--start-#{$day}>&__day:first-child {
+      margin-left: ($day-width + $day-gap) * $number;
+    }
+  }
+
+  @for $day from 28 through 31 {
+    &--month-length-#{$day}>&__day:nth-child(n + #{$day + 1}) {
+      visibility: hidden;
+    }
+  }
+}
+
