--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,4 @@
 $day-color: #eee;
-
 $start-day: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 $gap-between-days: 1px;
 $padding-between-days: 10px;
@@ -7,6 +6,5 @@ $max-columns: 7;
 $height-day-box: 100px;
 $width-day-box: 100px;
 $width-max-calendar: ($max-columns * $width-day-box) + ($gap-between-days * $max-columns);
-
-$transition-during: 0.5s;
+$transition-duration: 0.5s;
 $transform-day-ceil: translateY(-20px);
