--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,83 @@
-body {
+.page__body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+}
+
+$squaresize: 100px;
+$fonsize: 30px;
+$month-length: 29;
+$start-day: sun;
+
+.calendar {
+  padding: 10px;
+  width: $squaresize * 7 + 6px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+
+  &__day {
+    width: $squaresize;
+    height: $squaresize;
+    box-sizing: border-box;
+    border: 1px solid black;
+    background-color: #eee;
+    font-size: $fonsize;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    line-height: $squaresize; // alignes ::before vertically
+    display: flex;
+    justify-content: center;  // alignes ::before horizontally
+    cursor: pointer;
+    transition-duration: 500ms;
+
+    &:first-child {
+      @if $start-day == mon {
+        $day: 0;
+
+        margin-left: $day;
+      } @else if $start-day == tue {
+        $day: $squaresize * 1 + 1px;
+
+        margin-left: $day;
+      } @else if $start-day == wed {
+        $day: $squaresize * 2 + 2px;
+
+        margin-left: $day;
+      } @else if $start-day == thu {
+        $day: $squaresize * 3 + 3px;
+
+        margin-left: $day;
+      } @else if $start-day == fri {
+        $day: $squaresize * 4 + 4px;
+
+        margin-left: $day;
+      } @else if $start-day == sat {
+        $day: $squaresize * 5 + 5px;
+
+        margin-left: $day;
+      } @else if $start-day == sun {
+        $day: $squaresize * 6 + 6px;
+
+        margin-left: $day;
+      }
+    }
+  }
+
+  &__day:hover {
+    transform: translateY(-20px);
+    background-color: pink;
+  }
+
+  @for $day--num from 1 through 31 {
+    &__day:nth-child(#{$day--num}):before {
+      content: "#{$day--num}";
+    }
+  }
+
+  @for $days--in--month from $month-length + 1 through 31 {
+    &__day:nth-child(#{$days--in--month}) {
+      display: none;
+    }
+  }
 }
