--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,69 @@
+$cell-size: 100px;
+$flex-gap: 1px;
+
 body {
   margin: 0;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+
+  margin-top: 100px;
+}
+
+.calendar {
+    display: flex;
+    flex-wrap: wrap;
+    gap: $flex-gap;
+    width: 7 * $cell-size + $cell-size * 0.3;
+    padding: 10px;
+    
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: 1px solid #000;
+
+    transition: 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+  }
+
+  @for $N from 1 through 31 {
+    &__day:nth-child(#{$N})::before {
+      content: '#{$N}';
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+    }
+  }
+
+  $day-of-week:
+    mon 0,
+    tue 1,
+    wed 2,
+    thu 3,
+    fri 4,
+    sat 5,
+    sun 6;
+
+  @each $day, $num in $day-of-week {
+    &--start-#{$day} &__day:first-child {
+      margin-left: $cell-size * $num + $flex-gap * $num * 3;
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-#{$length} &__day:nth-child(n + #{$length + 1}) {
+      visibility: hidden;
+    }
+  }
 }
