solve problem with styles lint

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,7 +18,7 @@ body {
     gap: $flex-gap;
     width: 7 * $cell-size + $cell-size * 0.3;
     padding: 10px;
-    
+
   &__day {
     display: flex;
     justify-content: center;
@@ -46,14 +46,7 @@ body {
     }
   }
 
-  $day-of-week:
-    mon 0,
-    tue 1,
-    wed 2,
-    thu 3,
-    fri 4,
-    sat 5,
-    sun 6;
+  $day-of-week: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
   @each $day, $num in $day-of-week {
     &--start-#{$day} &__day:first-child {
