--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,25 +1,25 @@
-$cell-color: #eee;
-$cell-side: 100px;
-$cell-border-color: black;
-$days-count: 31;
-$cells-gap: 1px;
-$days-list: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
-$cell-hover-color: pink;
+@import 'variables';
 
-body {
-  margin: 0;
+* {
+  box-sizing: border-box;
+}
+
+html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.calendar {
+body {
   margin: 0;
+}
 
+.calendar {
   display: flex;
   flex-wrap: wrap;
   gap: $cells-gap;
-  width: 7 * $cell-side + 6px + 20px; /* 7 = days count, 6 = gap's count, 20px = 2*10px padding */
+  width: $calendar-width;
 
   padding: 10px;
+  margin: 0;
 
   list-style: none;
 
@@ -27,7 +27,6 @@ body {
     position: relative;
     width: $cell-side;
     height: $cell-side;
-    box-sizing: border-box;
 
     background-color: $cell-color;
     border: 1px solid $cell-border-color;
@@ -36,15 +35,15 @@ body {
 
     cursor: pointer;
 
-    transition: 0.5s;
+    transition: $transition-duration color, $transition-duration transform ;
 
     &:hover {
       background-color: $cell-hover-color;
-      transform: translate(0,-20px);
+      transform: translate(0, -20px);
     }
 
     @for $day from 1 through $days-count {
-      &:nth-child(#{$day}):before {
+      &:nth-child(#{$day})::before {
         content:' #{$day}';
         position: absolute;
         top: 50%;
@@ -60,12 +59,9 @@ body {
     }
   }
 
-
   @for $day-num from 28 through 31 {
     &--month-length-#{$day-num} :nth-child(n + #{$day-num + 1}) {
       display: none;
     }
   }
 }
-
-
