--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,10 @@
+@import "variables";
+
 body {
   margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
+
+@import "calendar";
