--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -37,7 +37,7 @@
   }
 
   @for $day from 28 to 31 {
-    &--month-length--#{$day} :nth-child(n + #{$day + $cell-gap}) {
+    &--month-length--#{$day} :nth-child(n + #{$day + 1}) {
     display: none;
     }
   }
