add calendar centering + fix week-days-position loop

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,9 @@
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .calendar {
   display: flex;
   flex-wrap: wrap;
@@ -42,7 +48,7 @@
     &--start-day--#{$day}
 
     &__day:first-child {
-      margin-left: $position;
+      margin-left: $position * ($cell-size + $gap-size);
     }
   }
 
