add task solution calendar 2

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -55,7 +55,7 @@ $days-of-week: (mon: 0, tue: 102px, wed: 202px, thu: 302px, fri: 402px, sat: 502
 }
 
 @for $lenght from 28 through 31 {
-  &--month-length--#{$lenght} :nth-child {
+  .month-length--#{$lenght} :nth-child {
         display: none;
   }
 }
