add color variables and fixed transition

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,8 @@ $days-in-row: 7;
 $days-gap: 1px;
 $month-size: 31;
 $week: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+$cell-background-color:#eee;
+$cell-border-color: black;
 
 body {
   margin: 0;
@@ -24,11 +26,11 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 30px;
 
-    background-color: #eee;
+    background-color: $cell-background-color;
     box-sizing: border-box;
-    border: 1px solid black;
+    border: 1px solid $cell-border-color;
     cursor: pointer;
-    transition: all 0.5s;
+    transition: transform 0.5s;
 
     &:hover {
       background-color: pink;
